# candle_myapp

./: Cargo.toml  LICENSE  README.md
.kiro/specs/candle-practice-enhancement/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: backend.rs  exercise.rs  main.rs  performance.rs
src/backend/: tests.rs
src/exercise/: tests.rs
src/exercises/: matrix_operations.rs  mod.rs  tensor_basics.rs
src/performance/: tests.rs
