[package]
name = "candle_myapp"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.0"

[features]
default = ["metal"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
mkl = ["candle-core/mkl"]
